--- a/django/mysite/static/css/base.css
+++ b/django/mysite/static/css/base.css
@@ -1,7 +1,10 @@
 body {
     font-family: "Roboto", sans-serif;
-    font-size: 17px;
+    font-size: 18px;
     background-color: #fdfdfd;
+}
+.head_text {
+    color: white;
 }
 .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
@@ -12,12 +15,12 @@ body {
     border-color: #dc281e;
 }
 .masthead {
-    background: #3398E1;
+    background: #e1335f;
     height: auto;
     padding-bottom: 15px;
-    box-shadow: 0 16px 48px #E3E7EB;
+    box-shadow: 0 16px 48px #e4ccd6;
     padding-top: 10px;
 }
 .card{
-    box-shadow: 0 16px 48px #E3E7EB;
+    box-shadow: 0 16px 48px #e4ccd6;
 }
