--- a/django/mysite/templates/sidebar.html
+++ b/django/mysite/templates/sidebar.html
@@ -2,14 +2,22 @@
 
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
-<div class="card my-4">
-        <h5 class="card-header">About Us</h5>
-    <div class="card-body">
-        <p class="card-text"> Link to github below</p>
-        <a href="https://github.com/Synnysyn/website-template"
-           class="btn btn-danger">Check code!</a>
+    <div class="card my-4">
+            <h5 class="card-header">About Us</h5>
+        <div class="card-body">
+            <p class="card-text"> Link to github below</p>
+            <a href="https://github.com/Synnysyn/website-template"
+            class="btn btn-danger">Check code!</a>
+        </div>
     </div>
-</div>
+    <div class="card my-4">
+        <h5 class="card-header">Image upload</h5>
+        <div class="card-body">
+            <p class="card-text"> This site also supports image uplaoding</p>
+            <a href="{% url 'upload' %}"
+            class="btn btn-warning">Check uploader!</a>
+        </div>
+    </div>
 </div>
 
 {% endblock sidebar %}
